--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.2",
+        "predis/predis": "^1.1",
         "spatie/laravel-activitylog": "^3.16",
         "spatie/laravel-translatable": "^4.5"
     },
