--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/ui": "^2.4",
         "laravelcollective/html": "^6.2",
         "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-activitylog": "^3.16",
         "spatie/laravel-translatable": "^4.5"
     },
