--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
         "laravel-echo": "^1.9.0",
         "moment": "^2.29.1",
         "pusher-js": "^7.0.1",
+        "vue-chat-scroll": "^1.4.0",
+        "vue-infinite-loading": "^2.4.5",
         "vue-loading-overlay": "^3.4.2",
+        "vue-moment": "^4.1.0",
         "vuex": "^3.5.1"
     }
 }
