--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vue-infinite-loading": "^2.4.5",
         "vue-loading-overlay": "^3.4.2",
         "vue-moment": "^4.1.0",
+        "vue-scrollto": "^2.20.0",
         "vuex": "^3.5.1"
     }
 }
