--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@editorjs/editorjs": "^2.19.0",
         "@syncfusion/ej2-icons": "^18.3.47",
         "@syncfusion/ej2-vue-notifications": "^18.3.47",
         "async": "^3.2.0",
