--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@editorjs/code": "^2.6.0",
+        "@editorjs/delimiter": "^1.2.0",
+        "@editorjs/embed": "^2.4.0",
+        "@editorjs/image": "^2.6.0",
+        "@editorjs/inline-code": "^1.3.1",
+        "@editorjs/link": "^2.3.1",
+        "@editorjs/marker": "^1.2.2",
+        "@editorjs/raw": "^2.3.0",
+        "@editorjs/simple-image": "^1.4.0",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "editorjs-inline-image": "^0.1.1",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.20",
@@ -20,11 +30,14 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
+        "simple-image-editorjs": "^1.4.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
         "@editorjs/editorjs": "^2.19.0",
+        "@editorjs/header": "^2.6.1",
+        "@editorjs/list": "^1.6.1",
         "@syncfusion/ej2-icons": "^18.3.47",
         "@syncfusion/ej2-vue-notifications": "^18.3.47",
         "async": "^3.2.0",
